// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseExpression parses courses with a single department 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "subject": "CSCI",
  },
  "$type": "course",
}
`;

exports[`CourseExpression parses courses with a two departments 1`] = `
Object {
  "$course": Object {
    "department": Array [
      "AS",
      "ES",
    ],
    "number": 121,
  },
  "$type": "course",
}
`;

exports[`CourseExpression parses courses with no departments as having no department 1`] = `
Object {
  "$course": Object {
    "number": "121",
  },
  "$type": "course",
}
`;

exports[`CourseExpression parses courses with sections 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "section": "A",
    "subject": "CSCI",
  },
  "$type": "course",
}
`;

exports[`CourseExpression parses courses with semesters 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "section": "A",
    "semester": 1,
    "subject": "CSCI",
    "year": 2014,
  },
  "$type": "course",
}
`;

exports[`CourseExpression parses courses with years 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "section": "A",
    "subject": "CSCI",
    "year": 2014,
  },
  "$type": "course",
}
`;

exports[`CourseExpression supports international courses 1`] = `
Object {
  "$course": Object {
    "international": true,
    "number": "121",
    "subject": "CSCI",
  },
  "$type": "course",
}
`;

exports[`CourseExpression supports international labs 1`] = `
Object {
  "$course": Object {
    "international": true,
    "number": "121",
    "subject": "CSCI",
    "type": "Lab",
  },
  "$type": "course",
}
`;

exports[`CourseExpression supports labs 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "subject": "CSCI",
    "type": "Lab",
  },
  "$type": "course",
}
`;

exports[`CourseExpression supports wildcard sections 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "section": "*",
    "subject": "CSCI",
  },
  "$type": "course",
}
`;

exports[`CourseExpression supports wildcard semesters 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "section": "*",
    "semester": "*",
    "subject": "CSCI",
    "year": "*",
  },
  "$type": "course",
}
`;

exports[`CourseExpression supports wildcard years 1`] = `
Object {
  "$course": Object {
    "number": "121",
    "section": "*",
    "subject": "CSCI",
    "year": "*",
  },
  "$type": "course",
}
`;
